<resources>
    <string name="app_name">Awesome Chat</string>
    <string name="error_binding">Binding is not valid</string>
    <string name="error_something_wrong">Something wrong \ud83d\ude05</string>
    <string name="text_chat">Chat</string>
    <string name="text_friend">Friend</string>
    <string name="text_profile">Profile</string>
    <string name="text_start_with_awesome_chat">Start with Awesome chat</string>
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_your_email">your email</string>
    <string name="text_password">Password</string>
    <string name="text_pass_hint">********</string>
    <string name="text_forgot_password_1">Forgot password?</string>
    <string name="text_forgot_password_2">Forgot password</string>
    <string name="text_no_account">No account?</string>
    <string name="text_signup_now">     Signup now</string>
    <string name="text_register">Register</string>
    <string name="text_name">FULL NAME</string>
    <string name="text_your_name_gmail_com">yourname@gmail.com</string>
    <string name="text_agree">I agree to the</string>
    <string name="text_policy">policies</string>
    <string name="and">and</string>
    <string name="text_term">terms</string>
    <string name="text_have_account">Already have an account?</string>
    <string name="text_register_now">Login now</string>
    <string name="success_register">Register successful</string>
    <string name="success_login">Login successful</string>
    <string name="text_confirm">Confirm</string>
    <string name="message">Message</string>
    <string name="text_validate_email">Please enter your email</string>
    <string name="text_validate_name">Please enter your name</string>
    <string name="text_write_valid_email">Write a valid email</string>
    <string name="text_send_to_email">Please check your email to change password</string>
    <string name="text_password_validate">Please enter your password
or Password is needed 6 characters</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="notify">Notify</string>
    <string name="sign_out">Sign out</string>
    <string name="looking_for_friends">Looking for friends…</string>
    <string name="looking_for_message">Looking for message…</string>
    <string name="friends">Friends</string>
    <string name="name">Nguyễn Hữu Thắng</string>
    <string name="request">Request</string>
    <string name="all">All</string>
    <string name="friend">Friend</string>
    <string name="text_message">Message</string>
    <string name="save">Save</string>
    <string name="edit_information">Edit information</string>
    <string name="text_phone">Phone Number</string>
    <string name="phone">0969584386</string>
    <string name="text_date">Date of Birth</string>
    <string name="date_time">10/05/2000</string>
    <string name="text_chat_room">hello, mình là thắng đẹp zai</string>
    <string name="text_enter_a_message">Enter a message …</string>
    <string name="text_verify_email">Please check your email to verify</string>
    <string name="success">Success</string>
    <string name="permission_denied">Access denied
 You need access</string>
    <string name="add_friend">Add friend</string>
    <string name="to_send_friends">TO SEND FRIENDS</string>
    <string name="friend_request">FRIEND REQUEST</string>
    <string name="text_time">24:00</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="accept_friends_request">Accept Friends Request</string>
    <string name="text_description">Description</string>
    <string name="text_validated_email">You haven\'t verified your email</string>
    <string name="text_decline_request">Decline friend request</string>
    <string name="text_unfriend">UnFriend This Person</string>
    <string name="create_message">Create Message</string>
    <string name="Cancel">Cancel</string>
    <string name="empty_message">You can\'t sent empty message</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_choose_language">Choose Language</string>
    <string name="text_apply">Apply</string>
    <string name="text_vn">Tiếng Việt</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="text_accept">Accepted friend request</string>
    <string name="text_sent_request">Sent a friend request</string>
    <string name="text_delete_message">Do you want to delete the message ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_notify">Notification</string>
    <string name="text_sent_photo">Sent a photo</string>
    <string name="text_looking_for_conversations">Looking for conversations …</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_choose_image">Choose from Gallery</string>
    <string name="text_add_photo">Add photo</string>
    <string name="cancel">Cancel</string>
</resources>
