<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rikkei.tranning.basekotlin.viewmodel.RequestVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEEEE">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toTopOf="@id/tv_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_50"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            app:layout_constraintBottom_toTopOf="@id/tv_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-36dp"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/date_time"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toTopOf="@id/tv_desc"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="top"
            android:padding="@dimen/dp_10"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@id/bt_add"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_dob" />

        <Button
            android:id="@+id/bt_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_button"
            android:text="@string/send_friend_request"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toTopOf="@id/bt_decline"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <Button
            android:id="@+id/bt_decline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_50"
            android:background="@drawable/bg_button"
            android:text="@string/text_decline_request"
            android:textSize="@dimen/sp_18"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/bt_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>